deployment-instructions.yaml
1. Create OKTA App registrations for two Apps
    - API Portal
    - API Gateway

    Parameter values to capture/save:
      - client-id
      - client-secret
      - issuer-uri
      - redirect-url

2. Provision an AKS Cluster
    $ az group create --name ajscg --location centralus
    $ az aks create -g ajscg -n scg-portal --network-plugin azure --network-policy calico -c 3 -s Standard_A8_v2 --generate-ssh-keys --no-wait
    $ az aks get-credentials -g ajscg -n scg-portal

3. Install NGINX as an Ingress Controller
    $ helm install nginx-ingress oci://ghcr.io/nginxinc/charts/nginx-ingress --version 0.17.1 -n nginx-ingress --create-namespace

4. Map external DNS of the NGINX LB to a wild card domain
    Map *.jci.onepivotal.net to 20.84.229.17

4. Install Cert-Manager
    $ kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.12.0/cert-manager.yaml

5. Install Let's Encrypt pointing to the staging server

apiVersion: cert-manager.io/v1
kind: ClusterIssuer
metadata:
  name: letsencrypt-prod
  namespace: cert-manager
spec:
  acme:
    email: akadari@vmware.com
    privateKeySecretRef:
      name: letsencrypt-prod
    server: https://acme-v02.api.letsencrypt.org/directory
    solvers:
    - http01:
        ingress:
          class: nginx

6. Validate Let's Encrypt Prod ClusterIssuer is installed
    $ kubectl get clusterissuer -A

7. Install Hashicorp Vault in DEV mode using dev-vault-values.yaml
    $ helm install vault hashicorp/vault --version 0.24.1 -f dev-vault-values.yaml -n vault --create-namespace

8. Validate Hashicorp Vault is installed with Agent Injector
    $ kubectl get all -n vault

9. Configure Vault for API Key Management
    a. Login to vault server pod
      $ kubectl -n vault exec -it vault-0 -- /bin/sh

    b. Enable Key-Value store, api-portal-keys, of type kv-v2
      $ vault secrets enable -path=api-portal-keys kv-v2

      >> Success! Enabled the kv-v2 secrets engine at: api-portal-keys/

    c. Create an access policy in Vault for API-Portal to perform all operations.

(
cat << EOF
  path "api-portal-keys/data/*" {
    capabilities = ["create", "read", "update", "delete", "list"]
  }
  path "api-portal-keys/metadata/*" {
    capabilities = ["list", "delete"]
  }
EOF
) | vault policy write api-portal-policy -


>> Success! Uploaded policy: api-portal-policy


    d. Create an access policy in Vault for Acme-Fitness-Gateway to read the API-Keys.

(
cat << EOF
  path "api-portal-keys/data/acme-fitness/*" {
    capabilities = ["read"]
  }
  path "api-portal-keys/metadata/acme-fitness/*" {
    capabilities = ["list"]
  }
EOF
) | vault policy write acme-fitness-gateway-policy -


>> Success! Uploaded policy: acme-fitness-gateway-policy


    e. Create an access policy in Vault for Animal-Rescue-Gateway to read the API-Keys.

(
cat << EOF
  path "api-portal-keys/data/animal-rescue/*" {
    capabilities = ["read"]
  }
  path "api-portal-keys/metadata/animal-rescue/*" {
    capabilities = ["list"]
  }
EOF
) | vault policy write animal-rescue-gateway-policy -


>> Success! Uploaded policy: animal-rescue-gateway-policy


    f. Connecting Vault to the Kubernetes cluster.

            $ vault auth enable kubernetes

            >> Success! Enabled kubernetes auth method at: kubernetes/

    g. As the Vault instance is on the same cluster as the API-Portal and API-Gateway,
            the following configuration helps Kubernetes deployments access Vault.

$ vault write auth/kubernetes/config \
    token_reviewer_jwt="$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" \
    kubernetes_host="https://$KUBERNETES_PORT_443_TCP_ADDR:443" \
    kubernetes_ca_cert=@/var/run/secrets/kubernetes.io/serviceaccount/ca.crt \
    disable_iss_validation="true" \
    disable_local_ca_jwt="true"

    >> Success! Data written to: auth/kubernetes/config

    g. Validate the K8s configuration on Vault.

        $ vault read auth/kubernetes/config

    h. Create roles to bind the namespaced ServiceAccount to the role (Access Policy) created earlier.

            $ vault write auth/kubernetes/role/api-portal-role \
                bound_service_account_names=api-portal-sa \
                bound_service_account_namespaces=api-portal \
                policies=api-portal-policy \
                ttl=24h

            >> Success! Data written to: auth/kubernetes/role/api-portal-role

            $ vault write auth/kubernetes/role/acme-fitness-gateway-role \
                bound_service_account_names=acme-fitness-gateway-sa \
                bound_service_account_namespaces=acme-fitness \
                policies=acme-fitness-gateway-policy \
                ttl=24h

            >> Success! Data written to: auth/kubernetes/role/acme-fitness-gateway-role

            $ vault write auth/kubernetes/role/animal-rescue-gateway-role \
                bound_service_account_names=animal-rescue-gateway-sa \
                bound_service_account_namespaces=animal-rescue \
                policies=animal-rescue-gateway-policy \
                ttl=24h

            >> Success! Data written to: auth/kubernetes/role/animal-rescue-gateway-role

10. Complete the below steps to configure SSO for API-Portal.

      a. Create a file called api-portal-sso-credentials.txt,
         including the following properties from the AD B2C values captured above.

          scope=openid,profile,email
          client-id={your_client_id}
          client-secret={your_client_secret}
          issuer-uri={your_issuer_uri}
          user-name-attribute=email

      b. Create the API portal installation namespace if it doesn't already exist

          $ kubectl create ns api-portal

      c. In the API portal installation namespace (api-portal), create a Kubernetes secret named
         sso-credentials using the api-portal-sso-credentials.txt file created in the previous step.

          $ kubectl create secret generic sso-credentials --from-env-file=./api-portal-sso-credentials.txt -n api-portal

          >> secret/sso-credentials created

      d. Validate that the sso-credentials secret is created in the api-portal namespace.

          $ kubectl get secret -n api-portal

11. Relocate images to a container registry.

          $ ./scripts/relocate-images.sh ${REGISTRY_URL}/api-portal

12.  Create a values file, api-portal-values.yaml to be used for API-Portal deployment using the package that I will provide.

apiPortalServer:
  image: "ajtanzuregistry.azurecr.io/api-portal/api-portal-server:1.3.7" <replace as needed>
  sourceUrls: "http://animal-rescue.jci.onepivotal.net/openapi" <replace as needed>
  title: "Johnson Controls Application Portal" <replace as needed>
  description: "Developer Portal for discvoering APIs" <replace as needed>
  imagePullPolicy: IfNotPresent
  registryCredentialsSecret: api-portal-image-pull-secret
  replicaCount: 1
  sourceUrlsCacheTtlSec: "300"
  sourceUrlsTimeoutSec: "10"
  requestMemory: "512Mi"
  requestCpu: "100m"
  limitMemory: "1024Mi"
  limitCpu: "500m"
  namespace: "api-portal"
  trustInsecureSourceUrls: true
  caCertData: ""

sso:
  enabled: true
  secretName: sso-credentials

apiKey:
  enabled: true
  vault:
    url: "http://vault.vault.svc:8200/"
    role: api-portal-role
    path: api-portal-keys

serviceAccount:
  create: true
  name: api-portal-sa


13. Deploy API-Portal

    $ ./scripts/install-api-portal.sh --namespace api-portal --values ./helm/api-portal-image-values.yaml

    >>  chart tarball: api-portal-1.3.6.tgz
        chart name: api-portal
        Waiting up to 5m for helm installation to complete
        Release "api-portal" does not exist. Installing it now.
        NAME: api-portal
        LAST DEPLOYED: Mon Jun  5 22:16:07 2023
        NAMESPACE: api-portal
        STATUS: deployed
        REVISION: 1
        TEST SUITE: None
        NOTES:
        * API Key is enabled
        * SSO is enabled
        Successfully installed Api portal

14. Validate that role (api-portal-role) is created; if not, create one with the below yaml.

apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: api-portal-role
  namespace: api-portal
rules:
- apiGroups:
  - ""
  resources:
  - services
  - endpoints
  verbs:
  - create
  - read
  - update
  - delete
  - list
- apiGroups:
  - discovery.k8s.io
  resources:
  - endpointslices
  verbs:
  - list
  - delete

      $ kubectl apply -f api-portal-role.yaml

15. Validate that the rolebinding (api-portal-role-binding) is created, if not create one with the below command.

      $ kubectl create rolebinding api-portal-role-binding --role=api-portal-role --serviceaccount=api-portal:api-portal-sa -n api-portal

16. Configure Ingress for the API-Portal with the below content in api-portal-ingress-config.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-portal
  namespace: api-portal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: api-portal-cert
    hosts:
    - api-portal.jci.onepivotal.net
  rules:
  - host: api-portal.jci.onepivotal.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-portal-server
            port:
              number: 8080

        $ kubectl apply -f api-portal-ingress-config.yaml

17. Relocate Spring Cloud Gateway Images.

        $ ./scripts/relocate-images.sh ${registry_url}/spring-cloud-gateway

    >> The relocation creates helm/scg-image-values.yaml file

18. Install the Spring Cloud Gateway operator

        $ ./scripts/install-spring-cloud-gateway.sh

        >>  chart tarball: spring-cloud-gateway-2.1.0-alpha.2.tgz
            chart name: spring-cloud-gateway
            Waiting up to 2m for helm installation to complete
            Release "spring-cloud-gateway" does not exist. Installing it now.
            NAME: spring-cloud-gateway
            LAST DEPLOYED: Mon Jun  5 22:52:59 2023
            NAMESPACE: spring-cloud-gateway
            STATUS: deployed
            REVISION: 1
            TEST SUITE: None
            NOTES:
            This chart contains the Kubernetes operator for Spring Cloud Gateway.
            Install the chart spring-cloud-gateway-crds before installing this chart

            Checking Operator pod state
            deployment "scg-operator" successfully rolled out
            ✔ Operator pods are running

            Checking custom resource definitions
            ✓ springcloudgatewaymappings.tanzu.vmware.com successfully installed
            ✓ springcloudgatewayrouteconfigs.tanzu.vmware.com successfully installed
            ✓ springcloudgateways.tanzu.vmware.com successfully installed

            Successfully installed Spring Cloud Gateway operator

19. Validate that the ClusterRole (scg-operator-resources-role) is created. This ClusterRole is used
    for creating SpringCloudGateway instances in arbitrary namespaces in the Cluster.

    $ kubectl describe ClusterRole scg-operator-resources-role

20. Deploy Ingress to expose the SCG instances openapi endpoints to the API Portal with the below scg-operator.yaml file


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-openapi
  namespace: spring-cloud-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - secretName: scg-operator-cert
    hosts:
    - scg-openapi.jci.onepivotal.net
  rules:
  - host: scg-openapi.jci.onepivotal.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scg-operator
            port:
              number: 80
